Print Service issue fixed (#517)
Co-authored-by: M1022006 <M1022006@A2ML18485.mindtree.com>